patches/new-colon-uninit
Bottom: b188b8636ce094e2a26f8e4ef11d7c928dc55d57
Top:    1bbed7ac4edac775bce97929c7aec1a16d57fe21
Author: scott snyder <sss@karma>
Date:   2021-12-16 12:39:42 -0500

We get a false positive uninitialized variable warning from this source:

struct DbObjectGuard   {
  DbObjectGuard();
};

void allocate(char* ptr)
{
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
}


$ cppcheck x.cc
Checking x.cc ...
x.cc:7:18: error: Uninitialized variable: g [legacyUninitvar]
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
                 ^

The warning goes away if the `::' before the new is removed.

Try to fix by extending matching to recognize this case.
